--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <img src="hint3.jpg" alt="Hint 3 Image" class="hint-image">
 </div>
     <!-- Admin Controls -->
-    <button id="adminUnlockBtn">Admin Login</button>
-    <button id="resetBtn" class="hidden">Reset Timer</button>
+    <button id="adminUnlockBtn">Admin</button>
+    <button id="resetBtn" class="hidden">Reset</button>
 
     <script src="scripts.js"></script>
 </body>
