--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Escape Room Timer</h1>
+    <h1>TIME REMAINING:</h1>
     <div id="timer">00:00</div>
     <button id="startBtn">Start Timer</button>
 
