--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <button onclick="revealHint(2)">Hint 2</button>
 <button onclick="revealHint(3)">Hint 3</button>
 
-<div id="hint1" class="hint">
+<div id="hint1" class="hint">Does this go on top
     <img src="hint1.jpg" alt="Hint 1 Image" class="hint-image">
+    or bottom.
 </div>
 <div id="hint2" class="hint">
     <img src="hint2.jpg" alt="Hint 2 Image" class="hint-image">
