--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <div id="timer">00:00</div>
     <button id="startBtn">Start Timer</button>
 
+    <h2>Call</h2>
+    
+    <a href="https://wa.me/+60 17-535-0697?text=We%20need%20help%20in%20the%20escape%20room!" 
+   target="_blank" 
+   class="whatsapp-btn">
+   📞
+    </a>
+    
     <h2>Hints</h2>
 <button onclick="revealHint(1)">Hint 1</button>
 <button onclick="revealHint(2)">Hint 2</button>
